data/derived/sp14/progs/unify/prog1378.ml.out
Characters 80-89:
  | h::t -> 1 + sumdigits;;
                ^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
